[package]
name = "shallenge"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
clap = { version = "4.5.7", features = ["derive"] }
itertools = "0.13.0"
num-format = { version = "0.4.4", features = ["with-system-locale"] }
rand = "0.8.5"
sha2 = { version = "0.10.8", features = ["asm"] }
